# pitrex-studio

./: CMakeLists.txt  README.md  pitrex_project.cpp  pitrex_project.hpp  pitrex_studio_app.cpp  pitrex_studio_app.hpp  rb_app.c
rbbase/: RBBase.hpp  RBColor.cpp  RBColor.hpp  RBLogger.cpp  RBLogger.hpp  RBMatrix.cpp  RBMatrix.hpp  RBTimer.cpp  RBTimer.hpp  RBVector2.cpp  RBVector2.hpp  RBVector3.cpp  RBVector3.hpp
rbbasic/: README.md
rbbasic/basic/: rb_bas_arch.c  rb_bas_arch.h  rb_bas_array.c  rb_bas_array.h  rb_bas_callback.h  rb_bas_dictionary.c  rb_bas_dictionary.h  rb_bas_error.c  rb_bas_error.h  rb_bas_hexdump.c  rb_bas_hexdump.h  rb_bas_internal.h  rb_bas_interpreter.c  rb_bas_interpreter.h  rb_bas_io.c  rb_bas_io.h  rb_bas_kbhit.c  rb_bas_kbhit.h  rb_bas_lines.c  rb_bas_lines.h  rb_bas_math.c  rb_bas_math.h  rb_bas_platform.c  rb_bas_platform.h  rb_bas_sound.c  rb_bas_sound.h  rb_bas_textbuffer.c  rb_bas_textbuffer.h  rb_bas_tokenizer.c  rb_bas_tokenizer.h  rb_bas_variables.c  rb_bas_variables.h  rb_bas_vgraphic.c  rb_bas_vgraphic.h
rbbasic/examples/: biorythm.bas  diamond.bas  graphics.bas  ~autoload.bas
rbbasic/tests/: data.bas
texteditor/: TextEditor.cpp  TextEditor.h
